tests/NormalTests/paczka1/fuzzy1/25613962.err
Error in line 1: Bd1Ky A776 54,9
Error in line 8: 9ffMR A726 7,19
Error in line 9: 9ffMR A7{6 {4,9
Error in line 13: A735 A735 0,8
Error in line 20: C65iv A726 111,2
Error in line 7: Bd1Ky A735 66,3
Error in line 23: C65iv A776 10,7
Error in line 19: A735 S149 18,0
Error in line 32: E78WScJ0 A726 44,7
Error in line 33: E78WScJ0 A776 8,2
Error in line 35: 9ffMR A776 99,4
Error in line 38: 9ffMR S149 49,0
